# videoconverter

./: CMakeLists.txt  LICENSE  README.md  main.cpp  test.cpp
src/: CMakeLists.txt  FrameProcessor.cpp  FrameProcessor.h  KeyframeExtractor.cpp  KeyframeExtractor.h  VideoConverter.h
videoconverter/: FrameProcessor.h  KeyframeExtractor.cpp  KeyframeExtractor.h
